# signate-student-cup-2021-spring

./: .gitignore  README.md  pyproject.toml
logs/: 01_20210417.csv  02_20210417.csv  03_20210418.csv  03_20210420.csv  04_20210421.csv  05_20210421.csv  06_20210421.csv  07_20210421.csv  08_20210426.csv  09_20210426.csv  knn_baseline.csv  lgbmknn_baseline_v2.csv  lgbmknn_baseline_v3.csv  lgbmknn_baseline_v4.csv  lgbmknn_v1.csv  lgbmknn_v2.csv  lgbmknn_v3.csv  lgbmknn_v4.csv  lgbmknn_v5.csv  lgbmknn_v6.csv  lgbmknn_v7.csv  lgbmknn_v8.csv  xgb_knn_v1.csv  xgb_knn_v2.csv
notebooks/: 01_20210417.ipynb  02_20210417.ipynb  03_20210418.ipynb  04_20210421.ipynb  05_20210426.ipynb  06_20210428.ipynb  eda.ipynb  knn_baseline.ipynb  lgbm_knn.ipynb  lgbm_knn_baseline.ipynb  utils.py  xgboost_knn.ipynb
