[tool.poetry]
name = "signate-student-cup-2021-spring"
version = "0.1.0"
description = ""
authors = ["Mamoru Matsunaga <mamoru74521103@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
jupyterlab = "^3.0.14"
lightgbm = "^3.2.1"
xgboost = "^1.4.1"
optuna = "^2.7.0"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
category-encoders = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
